fix typo + input converter test